code: corrected spacing to view headers on nav clicks

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,8 +85,8 @@ tr, td {
     width:30px;
 }
 .section {
-    margin-top:2rem;
-    margin-bottom:2rem;
+    padding-top:4rem; /* add space between navbar and section */
+
 }
 #new-games .card, #fav-games .card {
     border:none;
